Quick fixes for preview's overflow and preloading icons

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -47,7 +47,7 @@ body {
       cursor          : default;
     }
     #writing-area #show-preview {
-      display         : none;
+      opacity         : 0;
     }
     #writing-area .menu.preview {
       text-align      : right;
@@ -68,6 +68,7 @@ body {
     #writing-area .preview-container #preview {
       width           : 100%;
       height          : 90%;
+      overflow        : auto;
       padding         : 0 .5rem;
       color           : #333;
     }
@@ -107,6 +108,6 @@ a:hover, a:active {
     top               : 15%;
   }
   #writing-area #show-preview {
-    display           : inline;
+    opacity           : 1;
   }
 }
